# round-robin_all-to-all

./: CMakeLists.txt  README.md
src/: distributed_sum.f90  main.f90  mpi_env.f90  round_robin.f90
